k8s/gui/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gui
  labels: 
    app: gui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gui
  template: 
    metadata:
      name: gui
      labels:
        app: gui
    spec:
      containers:
      - image:  bartosz95/dice-game-gui
        name:  gui
        ports:
        - containerPort: 80
        volumeMounts:
        - name: conf
          mountPath: /usr/share/nginx/html/keycloak.json
          subPath: keycloak.json
          readOnly: true
      volumes:
      - name: conf
        configMap:
          name: keycloak-json
