k8s/gui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dice-game-gui
  labels:
    app: dice-game-gui
spec:
  type: LoadBalancer
  ports:
   - port: 80
     targetPort: 4200
  selector:
    app: gui
