k8s/gui/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gui
  labels:
    app: gui
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gui
  type: LoadBalancer
