k8s/gui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-game-gui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - dice-game-gui
  rules:
  - host: dice-game-gui
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gui
            port:
              number: 80
