k8s/gui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gui
spec:
  tls:
    - hosts:
      - dice-game.com
  rules:
  - host: dice-game.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gui
            port:
              number: 80
